<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:clickable="true"
    tools:context=".MainActivity">

    <!-- Toolbar -->
    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/appbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <!-- Resto de la interfaz de usuario -->

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView3" >

        <LinearLayout
            android:id="@+id/Layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:baselineAligned="true"
            android:gravity="center"
            android:orientation="vertical">

            <!--CalendarView
                android:id="@+id/calendar_viewNEW"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:firstDayOfWeek="2"
                android:showWeekNumber="false" />

            <com.imanoweb.calendarview.CustomCalendarView
                android:id="@+id/calendar_viewNEW"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blanco"
                app:calendarBackgroundColor="@color/blanco"
                app:calendarTitleTextColor="@color/black"
                app:currentDayOfMonthColor="@color/L10"
                app:dayOfMonthTextColor="@color/black"
                app:dayOfWeekTextColor="@color/black"
                app:disabledDayBackgroundColor="@color/blanco"
                app:disabledDayTextColor="@color/grey"
                app:selectedDayBackgroundColor="@color/L10"
                app:titleLayoutBackgroundColor="@color/white"
                app:weekLayoutBackgroundColor="@color/white">
            </com.imanoweb.calendarview.CustomCalendarView-->

            <com.imanoweb.calendarview.CustomCalendarView
                android:id="@+id/calendar_viewNEW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#b7b7b7"

                app:calendarBackgroundColor="@color/colorapp"
                app:calendarTitleTextColor="@color/white"
                app:currentDayOfMonthColor="@color/M"

                app:dayOfMonthTextColor="@color/white"
                app:dayOfWeekTextColor="@color/white"

                app:titleLayoutBackgroundColor="@color/colorapp"
                app:weekLayoutBackgroundColor="@color/colorapp"

                app:selectedDayBackgroundColor="@color/darkgreen"
                app:selectedDayTextColor="@color/M"

                app:disabledDayBackgroundColor="@color/grey"
                app:disabledDayTextColor="@color/white"
                app:theme="@style/AppTheme"
                app:paddingEnd="5000sp"
                app:paddingStart="5000sp">


                <!--


                app:weekLayoutBackgroundColor="@color/red" // Linea de nombre semana

            -->

            </com.imanoweb.calendarview.CustomCalendarView>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBoxCambios" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/datosAgente_1"
                        android:textColor="#ff0000"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:lines="1"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/datosAgente_2"
                        android:textColor="#ff0000"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:lines="1"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/datosAgente_3"
                        android:textColor="#ff0000"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:lines="1"
                        android:textAlignment="center" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/G1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/g1"
                    android:onClick="PintarCalendario"
                    android:textColor="@color/G1"
                    android:textSize="24sp"/>

                <Button
                    android:id="@+id/G3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/g3"
                    android:onClick="PintarCalendario"
                    android:textColor="@color/G3"
                    android:textSize="24sp"/>

                <Button
                    android:id="@+id/G5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/g5"
                    android:onClick="PintarCalendario"
                    android:textColor="@color/G5"
                    android:textSize="24sp"/>
            </LinearLayout>

            <Button
                android:id="@+id/Boton_Ver_Hoy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="lanzar_dia_hoy"
                android:text="@string/Ver_Hoy" />


            <Button
                android:id="@+id/Boton_Ver_Lineas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="lanzar_dia"
                android:text="@string/Ver_Lineas" />

        </LinearLayout>
    </ScrollView>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/botonFlotante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_button_accept"
            app:fabSize="normal"
            app:borderWidth="0dp"
            />
    </FrameLayout>
</LinearLayout>